<resources>
    <string name="app_name">1erMomentoEvaMovil</string>
    <string name="txt_register_product">Registro de productos</string>
    <string name="txt_name">Nombre</string>
    <string name="txt_price">Precio</string>
    <string name="txt_register">Registrar</string>
    <string name="txt_new_old_stock">Stock viejo/Stock nuevo</string>
    <string name="txt_count">Contador</string>
</resources>